# coen320---ATC-Project

./: .cproject  .gitignore  .project  Makefile  README.md  ReadMe.md  aircraft_input.txt
191.168.141.10/: .project  .trgtproject
192.168.141.10/: .project  .trgtproject
192.168.141.9/: .project  .trgtproject
ATC_1/: .cproject  .project  Makefile
ATC_1/src/: ATC_1.cpp  Aircraft.cpp  Aircraft.h  Airspace.cpp  Airspace.h
aircraft/: .cproject  .project  Makefile
aircraft/src/: aircraft.cpp
coen320_atc_project/.metadata/: version.ini
computer_system/: .cproject  .project  Makefile
computer_system/src/: computer_system.cpp  shared_memory.h
operator_console/: .cproject  .project  Makefile
operator_console/src/: operator_console.cpp
project/: Makefile
project/src/: Aircraft.cpp  Aircraft.h  Airspace.cpp  Airspace.h  CMakeLists.txt  Radar.cpp  Radar.h  VisualRepresentation.cpp  VisualRepresentation.h  planeReference.txt  project.cpp
qnx_proj2/: .cproject  .project  Makefile
qnx_proj2/src/: Aircraft.cpp  Aircraft.h  Airspace.cpp  Airspace.h  ComputerSystem.cpp  ComputerSystem.h  Display.cpp  Display.h  Message.h  OperatorConsole.cpp  Radars.cpp  Radars.h  Timer.cpp  Timer.h  qnx_proj2.cpp  timer.cpp  timer.h
radar/: .cproject  Makefile
radar/src/: radar.cpp
radar_display/: .cproject  .project  Makefile
radar_display/src/: radar_display.cpp
src/: Aircraft.h  Airspace.h  ComputerSystem.cpp  ComputerSystem.h  Display.cpp  Display.h  Messages.h  Radars.cpp  Radars.h  Timer.cpp  Timer.h
(+5 files in other folders)
